--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section id="banner">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-7">
                     <div class="banner_text">
                         <h4>Hello, I'm</h4>
                         <h1>Badhon</h1>
@@ -74,7 +74,7 @@
                         <a href="#about">About Me</a>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-5">
                     <div class="banner_img">
                         <img src="images/banner.png" class="img-fluid" alt="banner">
                     </div>
@@ -121,7 +121,7 @@
     <section id="skill">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 mx-auto">
+                <div class="col-lg-6 col-md-10 mx-auto">
                     <div class="skill_tittle text-center">
                         <h4>My Skills</h4>
                         <h2>You Can <span>Imagine</span></h2>
@@ -132,7 +132,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 text-center">
+                <div class="col-lg-3 col-md-6 text-center">
                     <div class="skill_item">
                         <svg class="radial-progress html" data-percentage="90" viewBox="0 0 80 80">
                             <circle class="incomplete" cx="40" cy="40" r="35"></circle>
@@ -144,7 +144,7 @@
                         <h3>HTML5</h3>
                     </div>
                 </div>
-                <div class="col-lg-3 text-center">
+                <div class="col-lg-3 col-md-6 text-center">
                     <div class="skill_item">
                         <svg class="radial-progress css" data-percentage="85" viewBox="0 0 80 80">
                             <circle class="incomplete" cx="40" cy="40" r="35"></circle>
@@ -156,8 +156,8 @@
                         <h3>CSS/CSS3</h3>
                     </div>
                 </div>
-                <div class="col-lg-3 text-center">
-                    <div class="skill_item">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="skill_item md_mb">
                         <svg class="radial-progress javascript" data-percentage="70" viewBox="0 0 80 80">
                             <circle class="incomplete" cx="40" cy="40" r="35"></circle>
                             <circle class="complete" cx="40" cy="40" r="35"
@@ -168,8 +168,8 @@
                         <h3>javaScript</h3>
                     </div>
                 </div>
-                <div class="col-lg-3 text-center">
-                    <div class="skill_item xs_mb">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="skill_item xs_mb md_mb">
                         <svg class="radial-progress bootstrap" data-percentage="75" viewBox="0 0 80 80">
                             <circle class="incomplete" cx="40" cy="40" r="35"></circle>
                             <circle class="complete" cx="40" cy="40" r="35"
@@ -189,7 +189,7 @@
     <section id="service">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 mx-auto">
+                <div class="col-lg-6 col-md-10 mx-auto">
                     <div class="service_tittle text-center">
                         <h4>What I Do</h4>
                         <h2>My Services</h2>
@@ -307,7 +307,7 @@
     <section id="portfolio">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 mx-auto">
+                <div class="col-lg-6 col-md-10 mx-auto">
                     <div class="portfolio_tittle text-center">
                         <h4>Selected works</h4>
                         <h2>Check my <span>portfolio</span></h2>
@@ -317,7 +317,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio1.png" class="img-fluid" alt="portfolio item">
@@ -340,7 +340,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio2.png" class="img-fluid" alt="portfolio item">
@@ -362,7 +362,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio3.png" class="img-fluid" alt="portfolio item">
@@ -384,7 +384,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio4.png" class="img-fluid" alt="portfolio item">
@@ -417,7 +417,7 @@
     <section id="price">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 mx-auto">
+                <div class="col-lg-6 col-md-10 mx-auto">
                     <div class="price_tittle text-center">
                         <h4>Pricing</h4>
                         <h2>My Service <span>Price</span></h2>
@@ -515,29 +515,29 @@
     <section id="client">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="client_item text-center">
                         <i class="fas fa-users"></i>
                         <h2 class="counter">120</h2>
                         <h3>Satisfied Clients</h3>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                     <div class="client_item text-center">
                         <i class="fab fa-html5"></i>
                         <h2 class="counter">350</h2>
                         <h3>html template</h3>
                     </div>
                 </div>
-                <div class="col-lg-3">
-                    <div class="client_item text-center">
+                <div class="col-lg-3 col-md-6">
+                    <div class="client_item text-center md_mb">
                         <i class="fab fa-js-square"></i>
                         <h2 class="counter">260</h2>
                         <h3>JavaScript Template</h3>
                     </div>
                 </div>
-                <div class="col-lg-3">
-                    <div class="client_item text-center xs_mb">
+                <div class="col-lg-3 col-md-6">
+                    <div class="client_item text-center xs_mb md_mb">
                         <i class="fas fa-star"></i>
                         <h2 class="counter">5.00</h2>
                         <h3>Clients Rating</h3>
@@ -595,10 +595,7 @@
                                         end of the day, going forward, a new normal that has evolved
                                         from generation X
                                         is on
-                                        the runway heading towards a streamlined cloud solution.
-                                        User generated content
-                                        in
-                                        real-time will have multiple touchpoints for offshoring.</p>
+                                        the runway heading towards a streamlined cloud solution.</p>
                                 </div>
                                 <div class="testimonial_slider_item_user">
                                     <div class="testimonial_slider_item_user_img">
@@ -628,10 +625,7 @@
                                         end of the day, going forward, a new normal that has evolved
                                         from generation X
                                         is on
-                                        the runway heading towards a streamlined cloud solution.
-                                        User generated content
-                                        in
-                                        real-time will have multiple touchpoints for offshoring.</p>
+                                        the runway heading towards a streamlined cloud solution.</p>
                                 </div>
                                 <div class="testimonial_slider_item_user">
                                     <div class="testimonial_slider_item_user_img">
@@ -661,10 +655,7 @@
                                         end of the day, going forward, a new normal that has evolved
                                         from generation X
                                         is on
-                                        the runway heading towards a streamlined cloud solution.
-                                        User generated content
-                                        in
-                                        real-time will have multiple touchpoints for offshoring.</p>
+                                        the runway heading towards a streamlined cloud solution.</p>
                                 </div>
                                 <div class="testimonial_slider_item_user">
                                     <div class="testimonial_slider_item_user_img">
@@ -761,7 +752,8 @@
     <!--scroll top section end-->
 
     <!--jquery file linkup start-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+    <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/typed.min.js"></script>
     <script src="js/slick.min.js"></script>
