--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
     <section id="portfolio">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 mx-auto">
+                <div class="col-lg-6 col-md-10 mx-auto">
                     <div class="portfolio_tittle text-center">
                         <h2 style="margin-top: 80px;">Check my <span>portfolio</span></h2>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti atque, in iure
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio1.png" class="img-fluid" alt="portfolio item">
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio2.png" class="img-fluid" alt="portfolio item">
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio3.png" class="img-fluid" alt="portfolio item">
@@ -138,7 +138,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio4.png" class="img-fluid" alt="portfolio item">
@@ -159,7 +159,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio5.png" class="img-fluid" alt="portfolio item">
@@ -180,7 +180,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio6.png" class="img-fluid" alt="portfolio item">
@@ -201,7 +201,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio7.png" class="img-fluid" alt="portfolio item">
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio8.png" class="img-fluid" alt="portfolio item">
@@ -243,7 +243,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio9.png" class="img-fluid" alt="portfolio item">
@@ -264,7 +264,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-md-6">
                     <div class="portfolio_item">
                         <div class="portfolio_item_img">
                             <img src="images/portfolio10.png" class="img-fluid" alt="portfolio item">
