--- a/index.html
+++ b/index.html
@@ -752,8 +752,7 @@
     <!--scroll top section end-->
 
     <!--jquery file linkup start-->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
-    <script src="js/jquery-1.12.4.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/typed.min.js"></script>
     <script src="js/slick.min.js"></script>
