--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="#testimonial">Testimonial</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#footer">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
