--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="#testimonial">Testimonial</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
+                        <a class="nav-link" href="#contact">Contact me</a>
                     </li>
                 </ul>
             </div>
