--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="col-lg-6 col-md-7">
                     <div class="banner_text">
                         <h4>Hello, I'm</h4>
-                        <h1>Badhon</h1>
+                        <h1>Aadhon</h1>
                         <h3>A Creative <span class="typed"></span></h3>
                     </div>
                     <div class="banner_btn common_btn">
