--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                                         class="fab fa-facebook-f"></i></a></li>
                             <li><a href="https://twitter.com/iambadhon0" target="_blank"><i
                                         class="fab fa-twitter"></i></a></li>
-                            <li><a href="https://linkedin.com/in/iambadhon0/" target="_blank"><i
+                            <li><a href="https://linkedin.com/in/iambadhon/" target="_blank"><i
                                         class="fab fa-linkedin-in"></i></a></li>
                             <li><a href="https://github.com/iambadhon" target="_blank"><i class="fab fa-github"></i></a>
                             </li>
