--- a/index.html
+++ b/index.html
@@ -559,16 +559,12 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="testimonial_main">
-                        <div class="row">
-                            <div class="col-lg-11 col-md-10 center_align">
-                                <div class="testimonial_tittle">
-                                    <h2>Meet Client Satisfaction by using product</h2>
-                                    <p>The rise of mobile devices transforms the way we consume. elevant
-                                        channels such as
-                                        Facebook.
-                                    </p>
-                                </div>
-                            </div>
+                        <div class="testimonial_tittle">
+                            <h2>Meet Client Satisfaction by using our service</h2>
+                            <p>The rise of mobile devices transforms the way we consume. elevant
+                                channels such as
+                                Facebook.
+                            </p>
                         </div>
 
                         <div class="testimonial_prev">
