--- a/portfolio.html
+++ b/portfolio.html
@@ -313,8 +313,8 @@
                         <ul>
                             <li><a href="https://facebook.com/iambadhon0" target="_blank"><i
                                         class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="https://twitter.com/iambadhon0" target="_blank"><i
-                                        class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://instagram.com/iambadhon" target="_blank"><i
+                                        class="fab fa-instagram"></i></a></li>
                             <li><a href="https://linkedin.com/in/iambadhon0/" target="_blank"><i
                                         class="fab fa-linkedin-in"></i></a></li>
                             <li><a href="https://github.com/iambadhon" target="_blank"><i class="fab fa-github"></i></a>
@@ -360,7 +360,7 @@
 
     <!--scroll top section start-->
     <div class="scroll_top">
-        <i class="fas fa-sort-alpha-up"></i>
+        <i class="fas fa-level-up-alt"></i>
     </div>
     <!--scroll top section end-->
 
