--- a/portfolio.html
+++ b/portfolio.html
@@ -311,11 +311,11 @@
                     <div class="follow_me">
                         <h3>Follow Me</h3>
                         <ul>
-                            <li><a href="https://facebook.com/iambadhon0" target="_blank"><i
+                            <li><a href="https://facebook.com/toufiqul.dev" target="_blank"><i
                                         class="fab fa-facebook-f"></i></a></li>
                             <li><a href="https://instagram.com/iambadhon" target="_blank"><i
                                         class="fab fa-instagram"></i></a></li>
-                            <li><a href="https://linkedin.com/in/iambadhon0/" target="_blank"><i
+                            <li><a href="https://linkedin.com/in/iambadhon/" target="_blank"><i
                                         class="fab fa-linkedin-in"></i></a></li>
                             <li><a href="https://github.com/iambadhon" target="_blank"><i class="fab fa-github"></i></a>
                             </li>
