--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                     <div class="follow_me">
                         <h3>Follow Me</h3>
                         <ul>
-                            <li><a href="https://facebook.com/iambadhon0" target="_blank"><i
+                            <li><a href="https://facebook.com/toufiqul.dev" target="_blank"><i
                                         class="fab fa-facebook-f"></i></a></li>
                             <li><a href="https://instagram.com/iambadhon" target="_blank"><i
                                         class="fab fa-instagram"></i></a></li>
