--- a/portfolio.html
+++ b/portfolio.html
@@ -315,7 +315,7 @@
                                         class="fab fa-facebook-f"></i></a></li>
                             <li><a href="https://instagram.com/iambadhon" target="_blank"><i
                                         class="fab fa-instagram"></i></a></li>
-                            <li><a href="https://linkedin.com/in/iambadhon/" target="_blank"><i
+                            <li><a href="https://linkedin.com/in/iambadhon" target="_blank"><i
                                         class="fab fa-linkedin-in"></i></a></li>
                             <li><a href="https://github.com/iambadhon" target="_blank"><i class="fab fa-github"></i></a>
                             </li>
