--- a/index.html
+++ b/index.html
@@ -727,8 +727,9 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright_text text-center">
-                            <h5>&copy; Copyright 2022. All rights reserved by <a href="https://facebook.com/iambadhon0"
-                                    target="_blank">Toufiqul Islam Badhon</a></h5>
+                            <h5>&copy; Copyright 2022. All rights reserved by <a
+                                    href="https://facebook.com/toufiqul.dev" target="_blank">Toufiqul Islam Badhon</a>
+                            </h5>
                         </div>
                     </div>
                 </div>
